Configurable wallet and worker name

--- a/excavator.config
+++ b/excavator.config
@@ -1,6 +1,6 @@
 [
         {"time":0,"commands":[
-                {"id":1,"method":"algorithm.add","params":["equihash","equihash.eu.nicehash.com:3357","3KAKffgMS6JzNA5oa6C19zGXJgQbZxSFo6"]}
+                {"id":1,"method":"algorithm.add","params":["equihash","equihash.eu.nicehash.com:3357","${wallet}.${workername}"]}
         ]},
         {"time":3,"commands":[
                 {"id":1,"method":"worker.add","params":["0","0"]}
