All available GPUs will now be used

--- a/excavator.config
+++ b/excavator.config
@@ -3,10 +3,10 @@
                 {"id":1,"method":"algorithm.add","params":["equihash","equihash.eu.nicehash.com:3357","${wallet}.${workername}"]}
         ]},
         {"time":3,"commands":[
-                {"id":1,"method":"worker.add","params":["0","0"]}
+                ${workers}
         ]},
         {"time":10,"loop":10,"commands":[
-                {"id":1,"method":"worker.print.speed","params":["0"]},
+                ${prints},
                 {"id":1,"method":"algorithm.print.speeds","params":["0"]}
         ]}
 ]
